# NLP

./: main.py  przyklad_poprawiony.txt  przyklad_z_bledami.txt  pyproject.toml  slownik.txt
PS1/spaCy project/: main.py
PS2/: main.py
PS3/: main.py
PS4/: main.py  przyklad_z_bledami.txt
PS5/: main.py  readme.txt
