[tool.poetry]
name = "repl_python3_beta_NLTK-project"
version = "0.1.0"
description = ""
authors = ["alicjakarczewsk <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
spacy = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
